<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming_event"
        android:name="com.example.dicodingevent.ui.fragment.UpcomingEventFragment"
        android:label="@string/title_upcoming_event"
        tools:layout="@layout/fragment_upcoming_event" />

    <fragment
        android:id="@+id/navigation_finished_event"
        android:name="com.example.dicodingevent.ui.fragment.FinishedEventFragment"
        android:label="@string/title_finished_event"
        tools:layout="@layout/fragment_finished_event" />

    <fragment
        android:id="@+id/navigation_saved_event"
        android:name="com.example.dicodingevent.ui.fragment.SavedFragment"
        android:label="@string/title_saved_event"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dicodingevent.ui.fragment.SettingFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting" />
</navigation>