<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- progressbar -->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:indeterminateTint="?attr/colorPrimaryVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.5" />

        <!-- event banner -->
        <ImageView
            android:id="@+id/img_item_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/dummy_text"
            tools:src="@tools:sample/avatars" />

        <!-- bookmark switch -->
        <ImageView
            android:id="@+id/bookmark_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="25dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/saved_view_bg"
            android:contentDescription="@string/dummy_text"
            android:elevation="4dp"
            android:padding="10dp"
            android:src="@drawable/save_icon"
            app:layout_constraintTop_toBottomOf="@id/img_item_detail_photo"
            app:layout_constraintBottom_toBottomOf="@id/img_item_detail_photo"
            app:layout_constraintEnd_toEndOf="@id/img_item_detail_photo" />

        <!-- event title -->
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="8dp"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_item_detail_photo"
            tools:text="Item Name" />

        <!-- organizer name -->
        <TextView
            android:id="@+id/tv_owner_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name"
            tools:text="Owner Name" />

        <!-- time and quota -->
        <LinearLayout
            android:id="@+id/linear_begin_quota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_owner_name">

            <ImageView
                android:id="@+id/icon_begin_time"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/dummy_text"
                android:layout_gravity="center_vertical"
                android:src="@drawable/time_icon" />

            <TextView
                android:id="@+id/tv_begin_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                tools:text="@string/dummy_text"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/icon_quota_left"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/dummy_text"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:src="@drawable/quota_icon" />

            <TextView
                android:id="@+id/tv_quota_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"

                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                tools:text="@string/dummy_text" />
        </LinearLayout>

        <!-- description title -->
        <TextView
            android:id="@+id/tv_title_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/title_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_begin_quota" />

        <!-- desccription -->
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textSize="12sp"
            android:textColor="?attr/colorPrimaryVariant"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_description"
            tools:text="Description" />

        <!-- register button -->
        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:layout_marginBottom="32dp"
            android:text="@string/button_register"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:backgroundTint="?attr/colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
